[project]
name = "oemc5-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "lxml>=5.3.0",
    "matplotlib>=3.10.0",
    "psycopg2>=2.9.10",
    "pyarrow>=19.0.0",
    "rasterio>=1.4.3",
    "ray>=2.41.0",
    "requests>=2.32.3",
    "shapely>=2.0.7",
    "sqlalchemy>=2.0.37",
    "typer>=0.15.1",
]
